	- Do not forget to insert Indian IP address unless you're from India OR using Indian VPN

[B][COLOR green]V 1.0.1 (Tuesday 06 October, 2015)[/COLOR][/B]

-- [COLOR yellow][B]New functionality[/COLOR][/B]
	- Added Highest[1080p if available] and 'Let me choose'(720p and lower) streaming option under settings.

[B][COLOR green]V 1.0.2 (Saturday 10 October, 2015)[/COLOR][/B]
-- [COLOR yellow][B]Video[/COLOR][/B] Removed empty directory when stream is loaded, and rather keep existing directory.  Resuming should work now for movies, tvshows, and sports.  Please note, this update will pop up Inputstream errors due to the way addon is designed.  Don't be alarmed.

[B][COLOR green]V 1.0.3 (Saturday 10 October, 2015)[/COLOR][/B]
-- [COLOR yellow][B]Video Quality fixes[/COLOR][/B] Previous release 1.0.2 added quality bugs, this version should fix it.  Also, videos should load somewhat faster.

[B][COLOR green]V 1.0.4 (Thursday 15 October, 2015)[/COLOR][/B]
-- [COLOR yellow][B]Directory fixes[/COLOR][/B] Fixed next page error, and TV shows structure.

[B][COLOR green]V 1.0.5 (Thursday 17 December, 2015)[/COLOR][/B]
-- [COLOR yellow][B]website changes fix[/COLOR][/B] Fixed changes for website, sports should work again.

[B][COLOR green]V 1.0.6 (Friday 26 February, 2016)[/COLOR][/B]
-- [COLOR yellow][B]TV shows fix[/COLOR][/B] Fixed changes for website, missing TV shows should pull up.  added verify=False for requests

[B][COLOR green]V 1.0.7 (Saturday 26 March, 2016)[/COLOR][/B]
-- [COLOR yellow][B]ipaddress fix[/COLOR][/B] Fixed ipaddress dependency.  Also fixed movie collections video links.

[B][COLOR green]V 1.0.8 (Saturday 27 May, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] Added 720p links for live sports streaming(if available - need to use let me choose option), and fixed subtitles integration with 3rd party services.

[B][COLOR green]V 1.0.9 (Saturday 21 June, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] fix for tvshows.